--- a/Models/SpeechLM/2024.10.29_VADUSA.md
+++ b/Models/SpeechLM/2024.10.29_VADUSA.md
@@ -46,6 +46,9 @@ Our approach demonstrates strong generalization across large datasets and variou
 
 ## 1.Introduction: 引言
 
+<details>
+<summary>展开原文</summary>
+
 Large language models (LLMs) with auto-regressive (AR) architectures ([GPT-3 [1]](../TextLM/2020.05.28_GPT-3.md); [LLaMA [2]](../TextLM/2023.02.27_LLaMA.md)) have gained significant success in recent years.
 They generate text byte-pair encoding (BPE) tokens using a next-token prediction strategy ([Transformer [3]](../_Transformer/2017.06.12_Transformer.md)).
 This strategy samples the next token from a multinomial distribution generated based on the history tokens, which is simple but effective in building coherence over a long context.
@@ -54,7 +57,7 @@ The paradigm in LLMs is then introduced to the speech modeling and synthesis fie
 Studies like [SPEAR-TTS [9]](2023.02.07_SPEAR-TTS.md), [VALL-E [10]](2023.01.05_VALL-E.md) and [BASE-TTS [11]](2024.02.12_BASE-TTS.md) and other works ([VALL-T [12]](2024.01.25_VALL-T.md); [ELLA-V [13]](2024.01.14_ELLA-V.md)) implement decoder-only AR architectures for speech codec generation with large-scale training data, allowing for generating natural-sounding speech.
 
 However, there is a significant difference between text and speech data: the sequence of speech tokens is often much longer than that of text tokens for the same sentence.
-For example, a piece of 10-second speech needs 500 HuBERT tokens (\SI{50}{\hertz}) ([HuBERT [4]](../Speech_Representaion/2021.06.14_HuBERT.md)) to represent, while the text transcription of the same utterance only costs approximately 20 to 40 text BPE tokens.
+For example, a piece of 10-second speech needs 500 HuBERT tokens (50 Hz) ([HuBERT [4]](../Speech_Representaion/2021.06.14_HuBERT.md)) to represent, while the text transcription of the same utterance only costs approximately 20 to 40 text BPE tokens.
 It is reasonable because the text is more information-dense, while speech captures finer acoustic details over time, resulting in a longer token sequence.
 Moreover, the trivial AR architecture predicts only one token at each inference step, causing speech generation time especially long.
 This creates a challenge between the need for low-latency spoken language synthesis and modeling long speech sequences.
@@ -77,6 +80,45 @@ The complexity and variability inherent in speech synthesis often resulted in su
 This prompted us to innovate beyond mere adaptation, leading to the development of the ***VADUSA*** method.
 By integrating a tolerance mechanism, ***VADUSA*** not only accelerates the decoding process but also enhances the overall synthesis robustness and quality by effectively managing the speculative decoding's inherent uncertainty.
 This novel approach proves crucial in bridging the gap between fast decoding and maintaining high synthesis fidelity.
+
+</details>
+<br>
+
+采用自回归架构的大语言模型 ([GPT-3 [1]](../TextLM/2020.05.28_GPT-3.md); [LLaMA [2]](../TextLM/2023.02.27_LLaMA.md)) 在最近几年取得了显著的成功.
+它们使用下一个 Token 预测策略来生成文本**字节对编码 (Byte-Pair Encoding, BPE)** Token.
+这种策略基于历史 Token 从多项分布中采样下一个 Token, 简单但是有效地构建了长上下文的连贯性.
+
+随着离散神经音频 Token 的出现 ([HuBERT [4]](../Speech_Representaion/2021.06.14_HuBERT.md); [Wav2Vec 2.0 [5]](../Speech_Representaion/2020.06.20_Wav2Vec2.0.md); [VQ-Wav2Vec [6]](../Speech_Representaion/2019.10.12_VQ-Wav2Vec.md); [VQTTS [7]](../E2E/2022.04.02_VQTTS.md); [EnCodec [8]](../Speech_Neural_Codec/2022.10.24_EnCodec.md)), 语音发言也可以被编码为离散 Token 序列.
+LLM 的范式随之引入语音建模和合成领域.
+
+诸如 [SPEAR-TTS [9]](2023.02.07_SPEAR-TTS.md), [VALL-E [10]](2023.01.05_VALL-E.md) 和 [BASE-TTS [11]](2024.02.12_BASE-TTS.md) 等研究, 实现了基于大规模训练数据的仅解码器的自回归架构的语音编解码生成, 允许生成自然发音的语音.
+
+
+然而, 文本和语音数据之间存在着显著差异: 对于相同的句子, 相应的语音 Token 序列通常比文本 Token 序列更长.
+例如, 一小段十秒的语音需要 500 个 HuBERT Token (50 Hz) long ([HuBERT [4]](../Speech_Representaion/2021.06.14_HuBERT.md)) 来表示, 而相应的文本转写只需要 20 到 40 个文本 BPE Token.
+这是合理的, 因为文本的信息密度更高, 而语音捕捉了随时间变化的细微声学细节, 因此 Token 序列更长.
+
+此外, 简单的自回归架构在每个推理步只预测一个 Token, 导致语音生成时间尤其长.
+这就为低延迟的口语语言合成和建模长语音序列带来了挑战.
+
+为了缓解这一问题, 之前的努力之一是通过蒸馏或更好的信息压缩来减少输入/输出序列长度, 即构建低比特率语音 Token.
+一系列关于神经编解码器 ([TiCodec [14]](../Speech_Neural_Codec/2023.09.15_TiCodec.md); [Single-Codec [15]](../Speech_Neural_Codec/2024.06.11_Single-Codec.md); [WavTokenizer [16]](../Speech_Neural_Codec/2024.08.29_WavTokenizer.md)) 试图通过良好配置的向量量化 (VQ) 模块和精心设计的训练过程来降低比特率.
+
+另一种启发性的研究是 aBPE ([aBPE [17]](../Speech_Representaion/2023.10.23_aBPE.md); [Li et al. (2024) [18]](2024.07.04_On_the_Effectiveness_of_Acoustic_BPE_in_Decoder-Only_TTS.md)), 它将 BPE 应用于离散语音 Token, 实现无损压缩, 并在加速语音合成方面显示出巨大的潜力.
+然而, 这些低比特率 Token 要么牺牲了语音重构精度, 要么使得帧移变化, 影响了语音合成的自然性和质量.
+
+另一种方法是在一个解码步预测更多的语音 Token, 这也是本文的主要关注点.
+这种想法从 RNN 时代开始, 由 Subscale WavRNN ([WaveRNN [19]](../TTS3_Vocoder/2018.02.23_WaveRNN.md)) 首次提出.
+它以子尺度的方式将 Wav Token 序列折叠, 实现并行预测多个 Token.
+最近, [VALL-E 2 [20]](2024.06.08_VALL-E_2.md) 采用分块的方式在一个自回归迭代中生成未来 Token 块 (通常为 2 个 Token), 但这种方法往往导致质量下降, 因为在预测序列至少一半部分时历史条件是不足的.
+与此相反, 推测解码 ([Speculative Decoding [21]](../_Full/Fast_Inference_from_Transformers_via_Speculative_Decoding.md)) 广泛用于 LLM 推理, 提供了加速而不损失性能的能力, 仅需将额外的草稿模型集成到架构中.
+
+基于推测解码的潜力, 我们应用先进的推测解码策略 [MEDUSA [22]](../_Basis/MEDUSA.md) 到自回归 TTS 模型 [VALL-E [10]](2023.01.05_VALL-E.md), 进行全面实验, 探索各种离散 Token 的影响.
+在尝试这样做时, 我们观察到一些重要挑战.
+语音合成中固有的复杂性和可变性往往导致次优的预测准确性和接受率, 使得难以实现所需的加速和质量.
+这促使我们超越单纯的适应, 开发了一种新的方法 ***VADUSA***.
+通过整合容忍性机制, ***VADUSA*** 不仅能加速解码过程, 还通过有效管理推测解码的固有不确定性来增强整体合成的健壮性和质量.
+这种新颖的方法在快速解码和保持高质量合成之间架起了桥梁.
 
 ## 2.Related Works: 相关工作
 
