--- a/Models/SpeechLM/2024.10.29_VADUSA.md
+++ b/Models/SpeechLM/2024.10.29_VADUSA.md
@@ -120,17 +120,32 @@ LLM 的范式随之引入语音建模和合成领域.
 通过整合容忍性机制, ***VADUSA*** 不仅能加速解码过程, 还通过有效管理推测解码的固有不确定性来增强整体合成的健壮性和质量.
 这种新颖的方法在快速解码和保持高质量合成之间架起了桥梁.
 
-## 2.Related Works: 相关工作
+## ~~2.Related Works: 相关工作~~
 
 ## 3.Methodology: 方法
 
+<details>
+<summary>展开原文</summary>
+
 In this section, we elaborate ***VADUSA***, a novel AR TTS decoding method that simultaneously achieves fast decoding and high-quality speech synthesis.
 The section first introduces [MEDUSA [22]](../_Basis/MEDUSA.md), an effective and lossless speculative decoding method for AR transformer-based models.
-Then we dig into an unsatisfactory vanilla combination of VALL-E and MEDUSA and analyze where its limitations come from.
-After that, incorporating the tolerance mechanism, we propose ***VADUSA***, a non-trivial integration for MEDUSA and VALL-E, realizing both decoding acceleration and synthesis quality improvements.
+Then we dig into an unsatisfactory vanilla combination of [VALL-E](2023.01.05_VALL-E.md) and [MEDUSA](../_Basis/MEDUSA.md) and analyze where its limitations come from.
+After that, incorporating the tolerance mechanism, we propose ***VADUSA***, a non-trivial integration for [MEDUSA](../_Basis/MEDUSA.md) and [VALL-E](2023.01.05_VALL-E.md), realizing both decoding acceleration and synthesis quality improvements.
 Finally, we brief the design of TTS-oriented sparse candidate trees.
 
-### A.Speculative Decoding and MEDUSA
+</details>
+<br>
+
+在本节中, 我们详细介绍了 ***VADUSA***, 一种新的自回归 TTS 解码方法, 它同时实现了快速解码和高质量语音合成.
+首先, 我们介绍 [MEDUSA [22]](../_Basis/MEDUSA.md), 一种有效且无损的推测解码方法, 适用于基于 Transformer 的 AR 模型.
+然后, 我们深入探讨了 [VALL-E](2023.01.05_VALL-E.md) 和 [MEDUSA](../_Basis/MEDUSA.md) 的简单组合并分析了其局限性所在.
+之后, 结合容忍机制, 我们提出了 ***VADUSA***, 一种 [MEDUSA](../_Basis/MEDUSA.md) 和 [VALL-E](2023.01.05_VALL-E.md) 的非平凡集成, 实现了解码加速和合成质量的改进.
+最后, 我们简要介绍了面向 TTS 的稀疏候选树的设计.
+
+### A.Speculative Decoding and MEDUSA: 推测解码与 MEDUSA
+
+<details>
+<summary>展开原文</summary>
 
 [Speculative decoding [21]](../_Full/Fast_Inference_from_Transformers_via_Speculative_Decoding.md) is an efficient, lossless technique for accelerating AR decoding.
 The key idea is to use a small, fast draft model to generate predictions, which are then verified by the target model in parallel.
@@ -142,31 +157,75 @@ For example, $t_{1,2}$ will be accepted iff. it matches the 'correct token' samp
 Similarly, $t_{1,3}$ will be accepted iff. $t_{1,2}$ is accepted and it matches the first next token of $t_{1,2}$.
 Assume that $t_{1,3}$ is accepted and $t_{1,4}$ is rejected, then the original head and draft heads of $t_{1,3}$ will predict $t_{2,1}, t_{2,2}, \dots$ to feed the third pass, and the draft acceptance length for the second pass is 2.
 
-To make better 'guesses', MEDUSA also considers multiple candidate tokens for each head and constructs a draft tree where the root node represents the first next token, each node a candidate token, and each root path a candidate continuation.
+To make better 'guesses', [MEDUSA](../_Basis/MEDUSA.md) also considers multiple candidate tokens for each head and constructs a draft tree where the root node represents the first next token, each node a candidate token, and each root path a candidate continuation.
 For each draft head, the tokens with top-$k$ logits are chosen as candidates.
 Each non-leaf node has $k$ children.
 The $(i+1)$-th layer has $k^{i-1}$ nodes and is filled with the top-$k$ tokens produced by the $i$-th draft head.
 All the root-to-leaf paths form all possible combinations of the candidates.
 With a carefully constructed tree mask, the whole tree of tokens can be verified within one forward pass (named tree attention).
 This approach significantly improves both the acceptance length of drafts and the extra computational cost is also reasonable by facilitating sparse trees that will be introduced in [Section 3-D](#sparse-tree).
-The simplicity of MEDUSA draft heads and the compatibility with any transformer-based AR model make MEDUSA highly adaptable and efficient.
+The simplicity of [MEDUSA](../_Basis/MEDUSA.md) draft heads and the compatibility with any transformer-based AR model make [MEDUSA](../_Basis/MEDUSA.md) highly adaptable and efficient.
 
-### B.Vanilla Combination and Re-thinking
+</details>
+<br>
 
-In the vanilla version of ***VADUSA***, we simply use a VALL-E TTS model as a base model for speech synthesis and integrate several MEDUSA heads on top of it to speed up generation.
-However, in initial experiments, we found its acceptance length is not comparable to the results of MEDUSA on text LLMs.
+[推测解码 [21]](../_Full/Fast_Inference_from_Transformers_via_Speculative_Decoding.md) 是一种有效且无损的用于加速自回归解码的技术.
+其关键思想是使用一个小型且快速的草稿模型来生成预测, 然后由目标模型并行验证.
+
+为了避免训练单独草稿模型的昂贵过程, [MEDUSA [22]](../_Basis/MEDUSA.md) 在原始模型之上引入了数个额外的草稿头.
+具体来说, 在第一次前向传播时, 假设原始的预测头预测了第一个下一个 Token $t_{1,1}$, 那么第 $i$-个草稿头就负责预测第 $(i+1)$ 个下一个 Token $t_{1,i+1}(i \ge 1)$, 使得模型可以并行生成多个 Token.
+生成的第一个下一个 Token 和草稿 Token 将按顺序连接并输入到同一个模型中进行下一次的前向传播.
+在第二遍中, 模型将几乎并行地验证草稿 Token.
+
+例如, $t_{1,2}$ 被接受当且仅当它与 $t_{1,1}$ 的原始头产生的分布所采样出的 '正确 Token' 匹配.
+类似地, $t_{1,3}$ 被接受当且仅当 $t_{1,2}$ 被接受且与 $t_{1,2}$ 的第一个下一个 Token 匹配.
+假设 $t_{1,3}$ 被接受且 $t_{1,4}$ 被拒绝, 那么 $t_{1,3}$ 的原始头和草稿头将预测 $t_{2,1}, t_{2,2}, \dots$ 作为第三遍的输入, 第二遍的草稿接受长度为 2.
+
+为了使得 '猜测' 更好, [MEDUSA](../_Basis/MEDUSA.md) 还考虑每个头的多个候选 Token, 并构造了一个草稿树, 树的根节点代表第一个下一个 Token, 节点是候选 Token, 根路径是候选的延续.
+对于每个草稿头, 选取其预测值的前 $k$ 个 Token 作为候选.
+每个非叶节点有 $k$ 个子节点.
+第 $(i+1)$ 层有 $k^{i-1}$ 个节点, 填充了第 $i$ 个草稿头所预测的前 $k$ 个 Token.
+所有的根到叶路径形成了候选的组合.
+通过精心构建的树掩码, 整个 Token 树可以在一次前向传播中验证 (称为树注意力 Tree Attention).
+这种方法显著提高了草稿的接受长度, 并通过利用稀疏树, 额外的计算成本也可接受, 这将在 [第 3 节 D 小节](#sparse-tree) 中介绍.
+[MEDUSA](../_Basis/MEDUSA.md) 草稿头的简单性和与任何基于 Transformer 的 AR 模型的兼容性使得 [MEDUSA](../_Basis/MEDUSA.md) 高度可适应和高效.
+
+### B.Vanilla Combination and Re-thinking: 简单组合与反思
+
+<details>
+<summary>展开原文</summary>
+
+In the vanilla version of ***VADUSA***, we simply use a [VALL-E](2023.01.05_VALL-E.md) TTS model as a base model for speech synthesis and integrate several [MEDUSA](../_Basis/MEDUSA.md) heads on top of it to speed up generation.
+However, in initial experiments, we found its acceptance length is not comparable to the results of [MEDUSA](../_Basis/MEDUSA.md) on text LLMs.
 This is because speech tokens such as those generated by systems like [EnCodec [8]](../Speech_Neural_Codec/2022.10.24_EnCodec.md), [HuBERT [4]](../Speech_Representaion/2021.06.14_HuBERT.md), and [Wav2Vec 2.0 [5]](../Speech_Representaion/2020.06.20_Wav2Vec2.0.md), are obtained through vector quantization or clustering of IDs, rather than having distinct abstract semantic differences like text tokens ([Choi et al. (2024) [23]](../_Full/Self-Supervised_Speech_Representations_are_More_Phonetic_than_Semantic.md)).
 Under the AR language modeling paradigm, multiple speech tokens often have very similar statistical features.
-This means that the multinomial distributions predicted by models like VALL-E tend to be more 'average' and selecting the highest probability top-$k$ tokens using draft heads only covers a small probability range.
-Given that during validation the original head samples only once as the 'correct token', it is challenging for the draft heads in VALL-E to make accurate predictions.
+This means that the multinomial distributions predicted by models like [VALL-E](2023.01.05_VALL-E.md) tend to be more 'average' and selecting the highest probability top-$k$ tokens using draft heads only covers a small probability range.
+Given that during validation the original head samples only once as the 'correct token', it is challenging for the draft heads in [VALL-E](2023.01.05_VALL-E.md) to make accurate predictions.
 
 Moreover, from the perspective of improving sample quality, tree attention can be seen as an efficient version of beam search.
 In beam search, by foreseeing tokens of the next few steps, we can select the combination with the highest probability to improve the sample quality.
 Similarly, under tree attention, we use draft heads to foresee the future tokens, and we hope the model accepts a candidate path with a higher accept probability.
 
-### C.VADUSA Decoding with the Tolerance Mechanism
+</details>
+<br>
 
-We propose ***VADUSA*** decoding method with tolerance mechanism to help the VALL-E model achieve a higher acceleration rate and better synthesis quality concurrently.
+在 ***VADUSA*** 的原始版本中, 我们将 [VALL-E](2023.01.05_VALL-E.md) TTS 模型作为语音合成的基础模型, 并在其之上集成多个 [MEDUSA](../_Basis/MEDUSA.md) 头来加速生成.
+然而, 在初步实验中, 我们发现其接受长度无法与 [MEDUSA](../_Basis/MEDUSA.md) 在文本 LLMs 的结果相比.
+这是因为像 [EnCodec [8]](../Speech_Neural_Codec/2022.10.24_EnCodec.md), [HuBERT [4]](../Speech_Representaion/2021.06.14_HuBERT.md), 和 [Wav2Vec 2.0 [5]](../Speech_Representaion/2020.06.20_Wav2Vec2.0.md) 这样的系统生成的语音 Token 都是通过向量量化或 ID 聚类得到的, 而不是像文本 Token 那样具有独特的语义差异 ([Choi et al. (2024) [23]](../_Full/Self-Supervised_Speech_Representations_are_More_Phonetic_than_Semantic.md)).
+在自回归语言建模范式下, 多个语音 Token 往往具有非常相似的统计特征.
+这意味着像 [VALL-E](2023.01.05_VALL-E.md) 这样的模型预测的多项分布往往更加 '平均', 而仅使用草稿头来选择概率最高的前 $k$ 个 Token 仅仅覆盖了很小的概率范围.
+由于在验证时, 原始头只采样一次作为 '正确 Token', 因此 [VALL-E](2023.01.05_VALL-E.md) 中的草稿头在准确预测时面临着困难.
+
+此外, 从提高样本质量的角度来看, 树注意力可以看作是 Beam 搜索的一种高效版本.
+在 Beam 搜索中, 通过预见下几个步骤的 Token, 我们可以选择概率最高的组合来提高样本质量.
+类似地, 在树注意力下, 我们使用草稿头来预见未来的 Token, 并希望模型接受一个概率较高的候选路径.
+
+### C.VADUSA Decoding with the Tolerance Mechanism: 结合容忍性机制的 VADUSA 解码
+
+<details>
+<summary>展开原文</summary>
+
+We propose ***VADUSA*** decoding method with tolerance mechanism to help the [VALL-E](2023.01.05_VALL-E.md) model achieve a higher acceleration rate and better synthesis quality concurrently.
 The tolerance mechanism allows the original head to sample multiple times, which means the 'correct tokens' is also multiple.
 The number of original head's samplings is controlled by the tolerance value $\tau$.
 Fig.01 demonstrates the process of our method when $\tau = 2$.
@@ -181,27 +240,64 @@ If multiple tolerances are present, we can sample multiple times using the afore
 This ensures that while the quality of sampling is maintained, acceleration effects are also achieved.
 In our experiments, we will evaluate using only the normal sampling method.
 
-### D.TTS-Oriented Sparse Tree Design
+</details>
+<br>
+
+我们提出了 ***VADUSA*** 解码方法, 结合一个容忍性机制, 以帮助 [VALL-E](2023.01.05_VALL-E.md) 模型同时实现更高的加速比和更好的合成质量.
+容忍性机制允许原始头多次采样, 这意味着 '正确 Token' 也可能是多个.
+原始头的采样次数由容忍值 $\tau$ 控制.
+
+图 1 展示了我们方法当容忍值为 2 时的过程.
+对于根节点和每个被接受的节点, 最多会有两个子节点被接受.
+如果多条路径被接受, 我们选择概率最大的那条路径.
+
+通过这种方式, 一方面虽然验证过程的成本略有增加, 但接受长度显著增加, 最终获得更高的实际加速比.
+另一方面, 通过在所有被接受路径中选择最佳候选路径, 样本质量相比一次性采样策略有所提高.
+
+注意到 ***VADUSA*** 仍然可以与任何改进的采样策略兼容.
+例如, [VALL-E 2 [20]](2024.06.08_VALL-E_2.md) 中避免顺序重复的方法和 ACI ([MEDUSA [22]](../_Basis/MEDUSA.md)) 中限制注意力窗口的方法, 只需将这些策略的采样结果视为原始头的预测即可.
+如果存在多个容忍值, 我们可以使用上述策略多次采样.
+这可以确保采样质量得到保持, 也能实现加速效果.
+在我们的实验中, 我们将只使用正常采样方法进行评估.
+
+### D.TTS-Oriented Sparse Tree Design: 面向 TTS 的稀疏树设计
 
 <a id="sparse-tree"></a>
+
+<details>
+<summary>展开原文</summary>
 
 In practice, $k$ is usually set as 10, i.e., each non-leaf candidate node has 10 children, which leads to an exponential explosion in the node number of the full candidate tree.
 To reduce the computational cost of tree attention, we need to design a sparse tree that only contains a tiny part of the candidate tree.
 Within a constrained number of nodes, we expect the sparse tree to help the model make as many acceptances as possible.
 Therefore, the design of sparse trees depends on the choice of calibration dataset and the output distribution of draft heads (otherwise, we cannot obtain the acceptance probability).
-Unfortunately, the existing trees provided by MEDUSA are based on text datasets and BPE tokenizers, which may not fit in speech synthesis scenarios.
+Unfortunately, the existing trees provided by [MEDUSA](../_Basis/MEDUSA.md) are based on text datasets and BPE tokenizers, which may not fit in speech synthesis scenarios.
 
 Using the criterion of maximizing the expectation of accepted length, we use the off-the-shelf greedy algorithm in [MEDUSA [22]](../_Basis/MEDUSA.md) to build a TTS-oriented sparse tree.
 Specifically, for each type of discrete audio token we use, we separately train a ***VADUSA*** model.
 Then, we run forward passes with the full tree on a subset of [LibriTTS [24]](../../Datasets/2019.04.05_LibriTTS.md) to obtain the accepted probability of each node.
 Finally, we run the greedy algorithm to build the sparse tree for each token type.
 
+</details>
+<br>
+
+在实践中, $k$ 通常设置为 10, 即每个非叶子候选节点有 10 个子节点, 这会导致候选树的节点数量呈指数增长.
+为了减少树注意力的计算成本, 我们需要设计一个仅包含候选树的一小部分的稀疏树.
+在有限的节点数量内, 我们期望稀疏树能够帮助模型做到尽可能多的接受.
+因此, 稀疏树的设计取决于选择的校准数据集和草稿头的输出分布 (否则, 我们无法获得接受概率).
+不幸的是, [MEDUSA](../_Basis/MEDUSA.md) 提供的现有树都是基于文本数据集和 BPE 分词器, 这可能不适用于语音合成场景.
+
+使用最大化接受长度的期望的标准, 我们使用 [MEDUSA [22]](../_Basis/MEDUSA.md) 中的贪婪算法来构建 TTS 方向的稀疏树.
+具体来说, 对于我们使用的每个离散音频 Token 类型, 我们单独训练一个 ***VADUSA*** 模型.
+然后, 我们在 [LibriTTS [24]](../../Datasets/2019.04.05_LibriTTS.md) 的子集上运行完整树的前向传递, 以获得每个节点的接受概率.
+最后, 我们使用贪婪算法来为每个 Token 类型构建稀疏树.
+
 ## 4.Experiments: 实验
 
 All experiments are conducted on NVIDIA A800-SXM4-80GB GPUs, including training with different strategies and evaluation on both objective and subjective metrics.
 Our implementation is adapted from the open-source repositories.
-- VALL-E Reproduction: https://github.com/lifeiteng/vall-e
-- MEDUSA: https://github.com/FasterDecoding/MEDUSA.
+- [VALL-E](2023.01.05_VALL-E.md) Reproduction: https://github.com/lifeiteng/vall-e
+- [MEDUSA](../_Basis/MEDUSA.md): https://github.com/FasterDecoding/MEDUSA.
 
 ### Experimental Setups
 
@@ -278,9 +374,9 @@ This reflects a trade-off that arises when relying on draft heads within the con
 
 ## 6.Conclusions: 结论
 
-In conclusion, ***VADUSA***, inspired by the integration of VALL-E and MEDUSA, demonstrates impressive effectiveness in accelerating AR TTS decoding and enhancing speech quality.
+In conclusion, ***VADUSA***, inspired by the integration of [VALL-E](2023.01.05_VALL-E.md) and [MEDUSA](../_Basis/MEDUSA.md), demonstrates impressive effectiveness in accelerating AR TTS decoding and enhancing speech quality.
 This is due to the draft heads' ability to learn in-context information, expanding the capabilities of TTS models.
-This approach benefits AR models like VALL-E, which often exhibit instability in speech synthesis.
+This approach benefits AR models like [VALL-E](2023.01.05_VALL-E.md), which often exhibit instability in speech synthesis.
 By selecting the most appropriate tokens in just a few decoding steps, ***VADUSA*** reduces the likelihood of collapse caused by incorrect token selection.
 The proposed tolerance mechanism further enhances this effect.
 Moreover, experimental results highlight the method's generalizability, offering valuable insights for future exploration and implementation.
