--- a/Models/SpeechLM/2024.10.29_VADUSA.md
+++ b/Models/SpeechLM/2024.10.29_VADUSA.md
@@ -294,14 +294,28 @@ Finally, we run the greedy algorithm to build the sparse tree for each token typ
 
 ## 4.Experiments: 实验
 
+<details>
+<summary>展开原文</summary>
+
 All experiments are conducted on NVIDIA A800-SXM4-80GB GPUs, including training with different strategies and evaluation on both objective and subjective metrics.
 Our implementation is adapted from the open-source repositories.
 - [VALL-E](2023.01.05_VALL-E.md) Reproduction: https://github.com/lifeiteng/vall-e
 - [MEDUSA](../_Basis/MEDUSA.md): https://github.com/FasterDecoding/MEDUSA.
 
-### Experimental Setups
+</details>
+<br>
 
-#### Architecture of TTS system and draft heads
+所有实验都在 NVIDIA A800-SXM4-80GB 显卡上进行, 包括使用不同的策略训练和在客观和主观指标上评估.
+我们的实现是基于开源仓库的.
+- [VALL-E](2023.01.05_VALL-E.md) 复现: https://github.com/lifeiteng/vall-e
+- [MEDUSA](../_Basis/MEDUSA.md): https://github.com/FasterDecoding/MEDUSA.
+
+### Experimental Setups: 实验设置
+
+#### Architecture of TTS system and draft heads: TTS 系统和草稿头的架构
+
+<details>
+<summary>展开原文</summary>
 
 The whole system is cascaded by tokenizers of text and speech, a codec language model, and a speech-codec-based vocoder.
 The codec language model, which is the main part of the system, consisted of 12 transformer layers, with 16 attention heads, 1024 hidden dimensions and 4096 feed-forward dimensions.
@@ -311,14 +325,44 @@ Two additional speech tokens are used in the ablation study: [Wav2Vec 2.0 [5]](.
 All models used in tokenizers are pretrained.
 The vocoder, CTX-vec2wav ([UniCATS [25]](../Diffusion/2023.06.13_UniCATS.md)), is constructed by two conformer blocks with 2 layers and 184 attention dimensions and a [HiFi-GAN [26]](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md), trained for converting semantic tokens to waveform. ***VADUSA*** draft heads are connected to the last transformer layer of the codec language model, constructed by a residual block with a linear layer and a [SiLU activation layer [27]](../../Modules/Activation/SiLU.md).
 
-#### Training Settings
+</details>
+<br>
+
+整个系统由文本和语音的分词器, 编解码语言模型, 以及基于语音-编解码的声码器级联而成.
+编解码语言模型, 即系统的主要部分, 由 12 层 Transformer 层组成, 每层有 16 个注意力头, 1024 隐藏维度和 4096 前馈维度.
+我们使用 Grapheme-to-Phoneme 转换器作为文本分词器.
+我们使用 [HuBERT-large [4]](../Speech_Representaion/2021.06.14_HuBERT.md) 模型的最后一层的特征对语音进行 2048 个 K 均值聚类, 以进行语音分词.
+在消融实验中使用了两种额外的语音 Token:
+- [Wav2Vec 2.0 [5]](../Speech_Representaion/2020.06.20_Wav2Vec2.0.md) 使用 2-组向量量化, 基于 [LibriTTS [24]](../../Datasets/2019.04.05_LibriTTS.md) 统计出现频率最高的 16000 个频率组的 ID.
+- [EnCodec [8]](../Speech_Neural_Codec/2022.10.24_EnCodec.md), 使用 8 层残差向量量化, 每个码本大小为 1024.
+
+分词器中使用的所有模型均为预训练模型.
+
+声码器 CTX-vec2wav ([UniCATS [25]](../Diffusion/2023.06.13_UniCATS.md)) 由两个具有两层和 184 个注意力维度的 Conformer 块以及 [HiFi-GAN [26]](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md) 组成, 用于将语义 Token 转换为波形.
+***VADUSA*** 草稿头连接到编解码语言模型的最后一个 Transformer 层, 由一个带有线性层和 SiLU 激活层的残差块构成.
+
+#### Training Settings: 训练设置
+
+<details>
+<summary>展开原文</summary>
 
 We perform experiments on both [LibriHeavy [28]](../../Datasets/2023.09.15_Libriheavy.md) with 50k hours of English speech data and [LibriTTS [24]](../../Datasets/2019.04.05_LibriTTS.md) with 585 hours.
 For the codec language model, we train two versions as the base model on them separately as foundational training stage: one epoch on Libriheavy or 20 epochs on LibriTTS,  where the learning rates are 0.05 and the warm-up steps are set as 200.
-Then we trained ***VADUSA*** heads on LibriTTS for 10 epochs with a fixed base model, mentioned as ***VADUSA***-wot(without tuning) and fine-tuning base model, mentioned as ***VADUSA***-wt(with tuning), where the learning rates are both 0.002 and warm-up steps are set as 40.
+Then we trained ***VADUSA*** heads on LibriTTS for 10 epochs with a fixed base model, mentioned as ***VADUSA-wot*** (without tuning) and fine-tuning base model, mentioned as ***VADUSA-wt*** (with tuning), where the learning rates are both 0.002 and warm-up steps are set as 40.
 For the vocoder, replicas of CTX-vec2wav ([UniCATS [25]](../Diffusion/2023.06.13_UniCATS.md)) are trained for senmatic tokens of HuBERT and wav2vec2.0 on LibriTTS for 1 million steps.
 
-#### Configurations in decoding strategy
+</details>
+<br>
+
+我们在 [LibriHeavy [28]](../../Datasets/2023.09.15_Libriheavy.md) 和 [LibriTTS [24]](../../Datasets/2019.04.05_LibriTTS.md) 两个数据集上进行实验.
+对于编解码语言模型, 我们分别在 LibriHeavy 或 LibriTTS 上训练两个版本作为基础模型, 作为基础训练阶段: LibriHeavy 训练 1 个 Epoch 或 LibriTTS 训练 20 个 Epoch, 学习率为 0.05, 预热步数为 200.
+然后我们在 LibriTTS 上训练 ***VADUSA*** 头, 其中固定的基础模型为 ***VADUSA-wot*** (无微调), 微调后的模型为 ***VADUSA-wt*** (微调), 学习率均为 0.002, 预热步数为 40.
+对于声码器, 我们在 HuBERT 和 wav2vec2.0 的语义 Token 上训练 CTX-vec2wav 的复制品 ([UniCATS [25]](../Diffusion/2023.06.13_UniCATS.md)), 训练 1 百万步.
+
+#### Configurations in decoding strategy: 解码策略配置
+
+<details>
+<summary>展开原文</summary>
 
 We apply the nuclear sampling method with top-$p$, setting the temperature to 0.9 and 1.0, on both the original head of the base model and the draft heads of ***VADUSA***.
 The number of draft heads is set to 4 or 6.
@@ -326,28 +370,58 @@ For the draft tree, the top-$k$ value is fixed at 10 to define the branching fac
 Candidate expectations were calculated using over 3000 audio samples, each longer than 6 seconds, from the LibriTTS dataset to construct the sparse tree.
 For the tolerance mechanism, we set $\tau$ values ranging from 1 to 4 across all configurations.
 
-### Evaluations
+</details>
+<br>
+
+我们对基础模型的原始头和 ***VADUSA*** 的草稿头应用核采样方法, 设置 Top-P 值为 0.9, 温度为 1.0.
+草稿头的数量设为 4 或 6.
+对于草稿数, Top-K 的值固定为 10 以定义分支因子, 并默认选择 64 个候选节点, 96 和 128 个节点用于消融实验.
+候选期望由 LibriTTS 数据集中超过 3000 个音频样本计算得出, 其中每个音频样本的长度超过 6 秒, 用于构造稀疏树.
+容忍性机制的 $\tau$ 值在所有配置中从 1 到 4 之间变化.
+
+### Evaluations: 评估
+
+<details>
+<summary>展开原文</summary>
 
 The exploration of inference speedup is conducted by measuring the number of discrete tokens generated per second during AR inference in the codec language model.
 The speedup ratio is calculated by dividing the output rate of the model equipped with ***VADUSA*** heads by that of the baseline model.
 Additionally, the number of the mean accepted tokens is used to assess the effectiveness of the ***VADUSA*** decoding with the tolerance mechanism.
-TTS performance is evaluated using word error rates (WER) measured by a conformer-transducer model\footnote{{https://huggingface.co/nvidia/stt\_en\_fastConformer\_transducer\_large}}.
-We also use the UTokyo-SaruLab MOS (UTMOS) prediction system\footnote{https://github.com/sarulab-speech/UTMOS22} to evaluate synthesis quality of the generated speech objectively.
-As shown in Table.01, the experimental settings varies in three key aspects: (1) whether 4 ***VADUSA*** heads or only base model participates during inference; (2) ***VADUSA***-wot or ***VADUSA***-wt is used; and (3) whether the tolerance mechanism is applied by setting $\tau$=3.
+TTS performance is evaluated using word error rates (WER) measured by a conformer-transducer model ([Github](https://huggingface.co/nvidia/stt\_en\_fastConformer\_transducer\_large)).
+We also use the UTokyo-SaruLab MOS (UTMOS) prediction system ([Github](https://github.com/sarulab-speech/UTMOS22)) to evaluate synthesis quality of the generated speech objectively.
+As shown in Table.01, the experimental settings varies in three key aspects: (1) whether 4 ***VADUSA*** heads or only base model participates during inference; (2) ***VADUSA-wot*** or ***VADUSA-wt*** is used; and (3) whether the tolerance mechanism is applied by setting $\tau$=3.
 
 The results suggest that ***VADUSA*** performs well in AR TTS systems.
 Inference acceleration is substantial, with no degradation in generation quality—in fact, performance improved when the tolerance mechanism is applied or when the base model is tuned.
 This improvement is particularly noticeable in models trained on smaller datasets, where the ***VADUSA*** heads help capture in-context information.
 This behavior contrasts with the application of similar strategies in LLMs for natural language modeling tasks.
 
+</details>
+<br>
+
+推理加速的探索通过测量编解码语言模型在自回归推理期间每秒生成的离散 Token 数量来进行.
+加速比通过将带有 ***VADUSA*** 头的模型的输出速率除以基线模型的输出速率来计算.
+此外, 平均接受 Token 数量用于评估结合容忍性机制的 ***VADUSA*** 解码的有效性.
+TTS 性能通过一个 conformer-transducer 模型 ([Github](https://huggingface.co/nvidia/stt_en_fastConformer_transducer_large)) 计算 WER 来评估.
+我们还使用 UTokyo-SaruLab MOS (UTMOS) 预测系统 ([Github](https://github.com/sarulab-speech/UTMOS22)) 来客观评估生成的语音的合成质量.
+如表 1 所示, 实验设置在三个关键方面各异:
+(1) 参与推理的模型是基础模型还是带有 4 个 ***VADUSA*** 头;
+(2) 使用的是 ***VADUSA-wot*** 或 ***VADUSA-wt***;
+(3) 是否使用容忍性机制, 即设置 $\tau$=3.
+
+结果表明, ***VADUSA*** 在 AR TTS 系统中表现卓越.
+推理加速显著, 生成质量无损——实际上, 在应用容忍性机制或微调基础模型时, 性能有所提升.
+这种改进在较小数据集上尤为显著, 因为 ***VADUSA*** 头能够帮助捕捉到上下文信息.
+与自然语言建模任务中的类似策略相比, 这种表现有所不同.
+
 ## 5.Results: 结果
 
-### Ablation Study
+### Ablation Study: 消融研究
 
 In this section, we present results from various configurations of the proposed methods.
 Furthermore, we demonstrate their overall effectiveness on large public datasets and different types of discrete speech tokens, which can serve as a valuable reference for future implementations.
 
-#### Effectiveness analysis of ***VADUSA*** configurations and tolerance strategy
+#### Effectiveness analysis of VADUSA configurations and tolerance strategy: VADUSA 配置和容忍策略的有效性分析
 
 We adjusts the candidate length to represent the number of selected nodes in sparse tree construction.
 The results, shown in Fig.02, reveal performance variations of ***VADUSA***-wt with draft heads set to {4, 6} and candidate choices set to {64, 96, 128}.
@@ -355,7 +429,7 @@ Contrary to expectations, increasing the number of candidates does not result in
 The tolerance mechanism is varied between 1 and 4, with 4 or 6 heads trained using either the ***VADUSA***-wot or ***VADUSA***-wt strategy.
 As illustrated in Fig.03, the tolerance mechanism performs well in general ***VADUSA*** configurations, with a larger tolerance value leading to better acceleration.
 
-#### Performance of different speech tokens
+#### Performance of different speech tokens: 不同语音 Token 的性能
 
 To demonstrate the effectiveness of the methods across different tokens, we conduct experiments on both semantic and acoustic tokens.
 For semantic tokens, we utilize HuBERT-extracted tokens with 2048 k-means clusters, as well as wav2vec2.0-extracted tokens with the top-16000 frequency in LibriTTS of a combined 2-group codebook.
@@ -365,7 +439,7 @@ However, due to the large codebook size of wav2vec2.0 and the remaining seven co
 This explains the suboptimal performance of decoding speedup observed in both cases.
 Adjusting the top-$k$ parameter during sparse tree construction may offer a potential solution.
 
-#### Generality in large dataset
+#### Generality in large dataset: 大数据集的通用性
 
 Our strategies also demonstrate generalizability on a scaled-up dataset, LibriHeavy, which contains approximately 50,000 hours of audiobook audio.
 Aside from the Word Error Rates (WERs), the performance of the proposed methods is consistent with that observed on the smaller LibriTTS dataset.
