--- a/Models/SpeechLM/2024.10.29_VADUSA.md
+++ b/Models/SpeechLM/2024.10.29_VADUSA.md
@@ -243,11 +243,13 @@ In our experiments, we will evaluate using only the normal sampling method.
 </details>
 <br>
 
+![](Images/2024.10.29_VADUSA_Fig.01.png)
+
 我们提出了 ***VADUSA*** 解码方法, 结合一个容忍性机制, 以帮助 [VALL-E](2023.01.05_VALL-E.md) 模型同时实现更高的加速比和更好的合成质量.
 容忍性机制允许原始头多次采样, 这意味着 '正确 Token' 也可能是多个.
 原始头的采样次数由容忍值 $\tau$ 控制.
 
-图 1 展示了我们方法当容忍值为 2 时的过程.
+图 01 展示了我们方法当容忍值为 2 时的过程.
 对于根节点和每个被接受的节点, 最多会有两个子节点被接受.
 如果多条路径被接受, 我们选择概率最大的那条路径.
 
@@ -409,6 +411,8 @@ TTS 性能通过一个 conformer-transducer 模型 ([Github](https://huggingface
 (2) 使用的是 ***VADUSA-wot*** 或 ***VADUSA-wt***;
 (3) 是否使用容忍性机制, 即设置 $\tau$=3.
 
+![](Images/2024.10.29_VADUSA_Tab.01.png)
+
 结果表明, ***VADUSA*** 在 AR TTS 系统中表现卓越.
 推理加速显著, 生成质量无损——实际上, 在应用容忍性机制或微调基础模型时, 性能有所提升.
 这种改进在较小数据集上尤为显著, 因为 ***VADUSA*** 头能够帮助捕捉到上下文信息.
@@ -445,10 +449,16 @@ As illustrated in Fig.03, the tolerance mechanism performs well in general ***VA
 <br>
 
 我们调整候选长度以表示稀疏树构造中选择节点的数量.
-如图 2 所示, 结果表明, 带有 4 或 6 个草稿头的 ***VADUSA-wt*** 在候选选择范围 {64, 96, 128} 上的性能变化.
+
+![](Images/2024.10.29_VADUSA_Fig.02.png)
+
+如图 02 所示, 结果表明, 带有 4 或 6 个草稿头的 ***VADUSA-wt*** 在候选选择范围 {64, 96, 128} 上的性能变化.
 与预期相反, 增加候选数量并不能提高加速性能, 这是因为接受更多候选导致的计算成本增加.
+
+![](Images/2024.10.29_VADUSA_Fig.03.png)
+
 容忍性机制在 1 和 4 之间变化, 4 或 6 个头使用 ***VADUSA-wot*** 或 ***VADUSA-wt*** 策略训练.
-如图 3 所示, 容忍性机制在一般的 ***VADUSA*** 配置中表现良好, 较大的容忍值获得更好的加速.
+如图 03 所示, 容忍性机制在一般的 ***VADUSA*** 配置中表现良好, 较大的容忍值获得更好的加速.
 
 #### Performance of Different Speech Tokens: 不同语音 Token 的性能
 
@@ -469,6 +479,9 @@ Adjusting the top-$k$ parameter during sparse tree construction may offer a pote
 为了展示方法在不同 Token 上的有效性, 我们在语义和音频 Token 上进行实验.
 对于语义 Token, 我们使用 HuBERT 提取的具有 2048 个 K 均值聚类的 Token 以及 wav2vec2.0 提取的 LibriTTS 中出现频率前 16000 的 2 组码本组合的 Token.
 对于声学 Token, 我们使用预训练的 EnCodec 模型, 具有 50Hz RVQ 和 8 个大小为1024的码本.
+
+![](Images/2024.10.29_VADUSA_Tab.02.png)
+
 表 02 中的结果表明, ***VADUSA*** 训练策略和提出的容忍性机制适用于大码本语义 Token 和声学 Token.
 然而, 由于 wav2vec2.0 的码本大小较大以及 EnCodec 剩余的七个码本, 预测头的概率分布相对平坦, 导致预测准确性较低, 进而导致草稿头的接受率降低.
 这解释了在这两种情况下观察到的解码加速的次优性能.
@@ -486,6 +499,8 @@ This reflects a trade-off that arises when relying on draft heads within the con
 
 </details>
 <br>
+
+![](Images/2024.10.29_VADUSA_Tab.03.png)
 
 我们的策略还展示了在大型数据集 LibriHeavy 上的通用性, 该数据集包含约 50,000 小时的有声书音频.
 除 WERs 以外, 所提出的方法的性能和在较小的 LibriTTS 数据集上观察到的性能保持一致.
