--- a/Models/SpeechLM/2024.06.04_Seed-TTS.md
+++ b/Models/SpeechLM/2024.06.04_Seed-TTS.md
@@ -9,7 +9,7 @@
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2406.02430)
   - [Publication]()
-  - [Github]()
+  - [Github](https://github.com/BytedanceSpeech/seed-tts-eval) Evaluation
   - [Demo](https://bytedancespeech.github.io/seedtts_tech_report)
 - 文件:
   - [ArXiv](_PDF/2406.02430v1__Seed-TTS__A_Family_of_High-Quality_Versatile_Speech_Generation_Models.pdf)
