--- a/Models/SpeechTokenizer/2024.10.31_DC-Spin.md
+++ b/Models/SpeechTokenizer/2024.10.31_DC-Spin.md
@@ -23,12 +23,28 @@
 
 ## Abstract: 摘要
 
+<details>
+<summary>展开原文</summary>
+
 Spoken language models (SLMs) have gained increasing attention with advancements in text-based, decoder-only language models.
 SLMs process text and speech, enabling simultaneous speech understanding and generation.
 This paper presents ***Double-Codebook Speaker-invariant Clustering (DC-Spin)***, which aims to improve speech tokenization by bridging audio signals and SLM tokens.
 ***DC-Spin*** extracts speaker-invariant tokens rich in phonetic information and resilient to input variations, enhancing zero-shot SLM tasks and speech resynthesis.
 We propose a chunk-wise approach to enable streamable ***DC-Spin*** without retraining and degradation.
 Comparisons of tokenization methods (self-supervised and neural audio codecs), model scalability, and downstream task proxies show that tokens easily modeled by an n-gram LM or aligned with phonemes offer strong performance, providing insights for designing speech tokenizers for SLMs.
+
+</details>
+<br>
+
+随着基于文本的仅解码器语言模型的进步, 口语语言模型 (Spoken Language Models, SLMs) 也越来越受到关注.
+SLMs 能够处理文本和语音, 实现同时的语音理解和生成.
+
+本文介绍了 ***双码本说话人不变聚类 (Double-Codebook Speaker-invariant Clustering, DC-Spin)***, 旨在通过连接语音信号和 SLM Token 来改进语音分词化.
+***DC-Spin*** 提取了具有丰富语音信息且对输入变化不敏感的说话人不变 Token, 从而增强零样本 SLM 任务和语音重合成.
+
+我们提出了一种分块方法, 使得 ***DC-Spin*** 在不重新训练和性能降低的情况下实现流式运行.
+
+对比之前的分词方法 (自监督和神经音频编码器), 模型可扩展性和下游任务代理表明了那些容易被 N 元语言模型建模或与音素对齐的 Token 提供了强大的性能, 为设计 SLMs 的语音分词器提供了见解.
 
 ## 1.Introduction: 引言
 
